--- a/research_paper/referances.bib
+++ b/research_paper/referances.bib
@@ -226,3 +226,46 @@
     pages = {874648},
     doi = {https://doi.org/10.1155/2014/874648}
 }
+
+@article{Carnagey_Anderson_2005,
+    title = {The Effects of Reward and Punishment in Violent Video Games on Aggressive Affect, Cognition, and Behavior},
+    author = {Nicholas L. Carnagey and Craig A. Anderson},
+    year = {2005},
+    journal = {Psychological Science},
+    volume = {16},
+    number = {11},
+    pages = {882-889},
+    doi = {https://doi.org/10.1111/j.1467-9280.2005.01632.x}
+}
+
+@article{fikkers_2016,
+  title = {The {Role} of {Perceived} {Peer} {Norms} in the {Relationship} {Between} {Media} {Violence} {Exposure} and {Adolescents}' {Aggression}},
+    volume = {19},
+    issn = {1521-3269, 1532-785X},
+    url = {http://www.tandfonline.com/doi/full/10.1080/15213269.2015.1037960},
+    doi = {10.1080/15213269.2015.1037960},
+    language = {en},
+    number = {1},
+    urldate = {2020-02-03},
+    journal = {Media Psychology},
+    author = {Fikkers, Karin M. and Piotrowski, Jessica Taylor and Lugtig, Peter and Valkenburg, Patti M.},
+    month = jan,
+    year = {2016},
+    pages = {4--26},
+    file = {Fikkers e.a. - 2016 - The Role of Perceived Peer Norms in the Relationsh.pdf:files/37/Fikkers e.a. - 2016 - The Role of Perceived Peer Norms in the Relationsh.pdf:application/pdf}
+  }
+
+@article{Hartmann_Möller_Krause_2015,
+    title = "Factors underlying male and female use of violent video games",
+    abstract = "Research has consistently shown that males play violent video games more frequently than females, but factors underlying this gender gap have not been examined to date. This approach examines the assumption that males play violent video games more because they anticipate more enjoyment and less guilt from engaging in virtual violence than females. This may be because males are less empathetic, tend to morally justify physical violence more and have a greater need for sensation and aggression in video game play than females. Results of a path model based on survey data of 444 respondents and using multi-step multiple mediation analyses confirm these assumptions. Taken together, the findings of this study shed further light on the gender gap in violent video game use.",
+    author = "T. Hartmann and I. Möller and C. Krause",
+    year = "2015",
+    doi = "10.1177/1461444814533067",
+    language = "English",
+    volume = "17",
+    pages = "1777--1794",
+    journal = "New Media and Society",
+    issn = "1461-4448",
+    publisher = "SAGE Publications Ltd",
+    number = "11",
+}
