--- a/research_paper/report_template_multipleFiles_Results.tex
+++ b/research_paper/report_template_multipleFiles_Results.tex
@@ -11,9 +11,9 @@
     \label{fig: Age Distribution}
 \end{wrapfigure}
 A total of 118 participants were included in this study: 118 students (aged 12-20 years), with corresponding data from parents. As shown in Figure 1, the student sample 
-was concentrated in the younger to mid-adolecent age ranges with relatively even distribution. The 12-14 age group accounted for 35\% of students (36\% of parents), 
+was concentrated in the younger to mid-adolescent age ranges with relatively even distribution. The 12-14 age group accounted for 35\% of students (36\% of parents), 
 the 15-17 age group accounted for 40\% of students (36\% of parents), and the 18-20 age group accounted for 25\% of students (28\% of parents). This shows a good spread
-accross the adolescent age range with a slight but negligible underrepresentation of older adolescents. The close alignment between student and parent age reporting demonstrates convergent validity and confirms that parent-child correspondence
+across the adolescent age range with a slight but negligible under representation of older adolescents. The close alignment between student and parent age reporting demonstrates convergent validity and confirms that parent-child correspondence
 was maintained in the data collection process.\\
 
 \subsubsection{Gender Distribution}
@@ -25,7 +25,7 @@ was maintained in the data collection process.\\
     \label{fig: Gender Distribution}
 \end{wrapfigure}
 As presented in Figure 2, gender distribution was relatively balanced among student participants, with males representing a slight majority. The difference of 7\% between
-male (52\%) and female (45\%) students was minimal, indicating a fairly even gender representation in the sample and as such does not suggest a signifficant gender bias in
+male (52\%) and female (45\%) students was minimal, indicating a fairly even gender representation in the sample and as such does not suggest a significant gender bias in
 participation. An additional 3\% of students identified as non-binary or preferred not to disclose their gender. This balanced distribution enables exploration of gender
 differences across gaming behaviours and outcomes.\\
 
@@ -43,10 +43,10 @@ Figure 3 represents the distribution of average daily gaming hours across the st
 reported 1-2 hours, 30\% reported 2-3 hours, and 20\% reported less than 1 hour of gaming per day. Only a small minority (8\%) reported gaming for more than 4 hours daily. 
 This indicates that while gaming is a common activity, excessive daily gaming is relatively uncommon in this adolescent sample. Cumulatively, 75\% of students reported
 engaging in gaming for 0.5-3 hours daily. Extreme gaming intensities (exceeding 5 hours daily) were rare, reported by only 3\% of participants, whilst 5\% reported
-4-5 hours and 12\% reported 3-4 hours. The distribution approximated normality around a modal value of 2-4 hours daily, whith extrem outliers representing distribution tails
+4-5 hours and 12\% reported 3-4 hours. The distribution approximated normality around a modal value of 2-4 hours daily, with extreme outliers representing distribution tails
 rather than normative engagement patterns.\\
 Notably, these moderate patterns contradict assumptions about widespread gaming addiction (\cite{Wang_Chan_Mak_Ho_Wong_Ho_2014}). The finding that the modal category of 2-4 hours falls within leisure-time
-recommendations and that exessive gaming (more than 5 hours) remains rare suggests that gaming constitutes a normative leisure activity rather than a pathological behaviour
+recommendations and that excessive gaming (more than 5 hours) remains rare suggests that gaming constitutes a normative leisure activity rather than a pathological behaviour
 in this adolescent cohort.\\
 
 \subsubsection{Gaming Frequency Per Week}
@@ -58,11 +58,11 @@ in this adolescent cohort.\\
     \label{fig: Gaming Frequency}
 \end{wrapfigure}
 As illustrated in Figure 4, the frequency with which students engage in gaming across a typica week shows a great concentration in the mid-range reaching as high as 24\%
-at 3 days a week. Specifically, 5\% of students reported gaming 0 days a week, which correlates who reported 0 hours of daily gaiming. The largest proportion of students
-(48\%) reported gaming 3-5 days per week, with 24\% gaming 3 days, 19\% gaming 4 days and 15\% gaminig 5 days weekly. A further 16\% reported gaming 6 (10\%) -7 (6\%) days 
+at 3 days a week. Specifically, 5\% of students reported gaming 0 days a week, which correlates who reported 0 hours of daily gaming. The largest proportion of students
+(48\%) reported gaming 3-5 days per week, with 24\% gaming 3 days, 19\% gaming 4 days and 15\% gaming 5 days weekly. A further 16\% reported gaming 6 (10\%) -7 (6\%) days 
 per week, indicating daily or near-daily engagement. Another 21\% reported gaming 1 (8\%) - 2 (14\%) days weekly. This distribution indicates that while daily gaming is
 not the norm a substantial minority of students engage in gaming on most days of the week.\\
-The heterogenous frequency distribution, combined with moderate daily gaming durations, indicates substential interindividual variation in cumulative gaming intensity.
+The heterogenous frequency distribution, combined with moderate daily gaming durations, indicates substantial interindividual variation in cumulative gaming intensity.
 When combining frequency and duration data, this exposure can range from minimal (e.g., 0.5 hours on 1 day) to substantial (e.g., 5+ hours on seven days). This variability
 highlights the importance of considering both dimensions when assessing gaming behaviours and potential impacts.\\
 
@@ -78,7 +78,7 @@ highlights the importance of considering both dimensions when assessing gaming b
 \end{wrapfigure}
 Figure 5 presents the student and parent perspectives on whether adolecents played alone or with friends. A striking difference emerges between student self-reports and parent
 perceptions. From the students perspective, 12\% reported gaming solely with friends, as much as 29\% reported gaming primarily with friends, 26\% reported gaming equally alone
-and with friends and 18\% reported playing primarily alone. Only 15\% reported gaming exclusively alone. In contrast, parents precieved a much higher prevalence of solitary
+and with friends and 18\% reported playing primarily alone. Only 15\% reported gaming exclusively alone. In contrast, parents perceived a much higher prevalence of solitary
 games with 19\% reporting their child games exclusively alone and as much as 31\% reported their child gaming primarily alone. Only 8\% said their child only plays with friends
 and another 18\% said their child primarily plays with friends. This discrepancy suggests that parents may underestimate the social dimensions of their children's gaming
 activity. \\
@@ -94,11 +94,11 @@ gaming and the need for parental education regarding gaming behaviours.\\ \\
     \caption{Game Genre Preferences Among Students}
     \label{fig: Game Genre Preferences}
 \end{wrapfigure}
-Figure 6 presents the types of games most frequently played by students. Shooter are the most popular genre, with 61\% of students reporting reglar engagement. This ios followed
+Figure 6 presents the types of games most frequently played by students. Shooter are the most popular genre, with 61\% of students reporting regular engagement. This is followed
 by Sandbox games (49\%), Role-Playing Games (RPGs) (37\%), Open World Games (28\%), Sport games (23\%) and Story Games (19\%). This distribution indicates a strong preference for
-action oriented gaming experiences among adolecents, with shooters and sandbox games dominating the landscape. The popularity of RPGs and open world games also suggests an interest
+action oriented gaming experiences among adolescents, with shooters and sandbox games dominating the landscape. The popularity of RPGs and open world games also suggests an interest
 in immersive, narrative driven experiences. Less popular genres such as sports and story games indicate more niche interests. Overall, the genre preferences reflect a diverse range 
-of gaming tastes within the adolescent cohort, with a clear leaning toward action and adventure oriented titles. It also suggests a tendency towards mostly shortlived and fast-paced
+of gaming tastes within the adolescent cohort, with a clear leaning toward action and adventure oriented titles. It also suggests a tendency towards mostly short lived and fast-paced
 gaming experiences rather than slow-paced and strategic ones.\\
 
 \subsection{Emotional Engagement with IN-Game Violence}
@@ -111,12 +111,12 @@ gaming experiences rather than slow-paced and strategic ones.\\
     \caption{Happiness Levels During Violent In-Game Actions Among Students}
     \label{fig: Happiness during Violent Actions}
 \end{wrapfigure}
-As illustrated in Figure 7, students reported varying levels of happines when engaging in violent actions within games. A majority of 76\% reported feeling happy 
-(46\% always, 30\% sometimes) when perfoming violent acts in games. In contrast only 24\% reported never enjoying violent acts in game or getting joy out of them.
-This indicates that for most adolecents, engaging in violent gameplay is assosiated with positive emotional experiences. A notable difference can be oberved between
-male and female adolescents. As for male students, as much as 62\% rewarted always enjoying violent in-geme acts and another 23\% reported sometimes enjoing them.
+As illustrated in Figure 7, students reported varying levels of happiness when engaging in violent actions within games. A majority of 76\% reported feeling happy 
+(46\% always, 30\% sometimes) when performing violent acts in games. In contrast only 24\% reported never enjoying violent acts in game or getting joy out of them.
+This indicates that for most adolescents, engaging in violent gameplay is associated with positive emotional experiences. A notable difference can be observed between
+male and female adolescents. As for male students, as much as 62\% reported always enjoying violent in-game acts and another 23\% reported sometimes enjoying them.
 In contrast only 42\% of female adolescents reported always enjoying violent acts in game with another 34\% reporting sometimes enjoying them. This suggests that male
-adolescents derive greater happines from violent gameplay compared to their female counterparts and are as such more emotionally engaged by violent in-game actions.\\
+adolescents derive greater happiness from violent gameplay compared to their female counterparts and are as such more emotionally engaged by violent in-game actions.\\
 
 \subsection{Behavioral Outcomes Related to In-Game Violence}
 
@@ -140,6 +140,6 @@ Figure 8 depics the aggressional changes in adolescents after prolonged gaming s
     \caption{Self-Reported Aggression Levels After Prolonged Gaming Among Students}
     \label{fig: Aggression Levels}
 \end{wrapfigure}
-Combined, 70\% of parend reported either no change or a decrease in aggression after prolonged gaming, suggesting that for the majority of adolescents, gaming does not lead
-to increased aggressive feelings. However, the 30\% of parents who observed an increase in aggression indicates that a significant minority of adolescents may be susceptable
-to gaming-related agression. This highlights the need for further investigation into the factors that may mediate or moderate the relationship between gaming and aggression.\\
+Combined, 70\% of parents reported either no change or a decrease in aggression after prolonged gaming, suggesting that for the majority of adolescents, gaming does not lead
+to increased aggressive feelings. However, the 30\% of parents who observed an increase in aggression indicates that a significant minority of adolescents may be susceptible
+to gaming-related aggression. This highlights the need for further investigation into the factors that may mediate or moderate the relationship between gaming and aggression.\\
