--- a/research_paper/referances.bib
+++ b/research_paper/referances.bib
@@ -269,3 +269,31 @@
     publisher = "SAGE Publications Ltd",
     number = "11",
 }
+
+@inbook{Békés_Ferstenberg_Perry_2018,
+    author = {Békés, Vera and Ferstenberg, Yocheved and Perry, John},
+    year = {2018},
+    month = {12},
+    pages = {1-5},
+    title = {Compartmentalization (Defense Mechanism)},
+    isbn = {978-3-319-28099-8},
+    doi = {10.1007/978-3-319-28099-8_1939-1}
+}
+
+@article{Wolpe_1968,
+  author = {Wolpe, Joseph},
+  journal = {Conditional reflex: a Pavlovian journal of research and therapy},
+  number = {3},
+  title = {Psychotherapy by reciprocal inhibition},
+  pages = {234-240},
+  year = {1968},
+  doi = {https://doi.org/10.1007/BF03000093},
+  abstract = {Reciprocal inhibition is a process of relearning whereby in the presence of a stimulus a non-anxiety-producing response is continually repeated until it extinguishes the old, undesirable response. A variety of the techniques based on reciprocal inhibition, such as systematic desensitization, avoidance conditioning, and the use of assertion, are described in detail. Behavior therapy techniques evaluated on the basis of their clinical efficacy are found to have striking success over traditional psychoanalytic methods. Currently, more comparative studies are required which will validate the merit of behavior therapy in the psychotherapeutic field while experimental research should continue to refine the techniques.}
+}
+
+@misc{RDR_Honor_System,
+    author = {Makuch, Eddie},
+    title = {Red Dead 2 Guide To Honor: How Morality And The Honor System Work},
+    howpublished = {\url{https://www.gamespot.com/articles/red-dead-2-guide-to-honor-how-morality-and-the-hon/1100-6462777/}},
+    note = {Accessed: 2026-01-17}
+}
