--- a/research_paper/report_template_multipleFiles_Introduction.tex
+++ b/research_paper/report_template_multipleFiles_Introduction.tex
@@ -46,13 +46,13 @@ adolescents' digital lives often blur the boundaries between fantasy and reality
 The issue is not only theoretical but also practical. Given the rise of interest in game and app development, understanding how
 reward systems and death depictions shape users' psychological responses can lead the creation of games that are engaging, yet
 ethically and emotionally responsible. Integrating psychological insights into game design could help developers build interactive
-experiences that foster empathy, prosocial behavior, and critical thinking about violence rather than desensitization or normalization
+experiences that foster empathy, prosocial behavior and critical thinking about violence rather than desensitization or normalization
 of harm.
 
 \subsection{Research question and hypotheses}
 This study aims to investigate how exposure to violent and death-related content in video games influences adolescents'
-moral reasoning, emotional responses, and behavioral tendencies. Specifically, the research will explore whether frequent exposure
-to violent/death content is associated with increased tolerance for aggression, reduced empathy, and altered moral judgments concerning
+moral reasoning, emotional responses and behavioral tendencies. Specifically, the research will explore whether frequent exposure
+to violent/death content is associated with increased tolerance for aggression, reduced empathy and altered moral judgments concerning
 harm to others. \\
 Based on desensitization and aggression models, we hypothesize that:
 \begin{enumerate}
