--- a/research_paper/report_template_multipleFiles_Main.tex
+++ b/research_paper/report_template_multipleFiles_Main.tex
@@ -26,7 +26,27 @@
 \maketitle
 
 \begin{abstract}
-This is the abstract.
+Violent and death related content in video games raises concerns about potential impacts on adolescents' moral reasoning, emotional responses and behavioural tendencies.
+This study investigated whether exposure to violent video game content influences these developmental domains in North Thine-Westphalia, Germany. A total of 118
+adolescents (aged 12-20) and an approximately equal number of parents completed structured questionnaires assessing gaming habits, engagement patterns, genre preferences,
+emotional responses to in-game violence and behavioural aggression tendencies.
+
+Results revealed moderate gaming engagement (57\% playing 0.5-3 hours daily) with substantial exposure to violent content, particularly shooters (61\% engagement).
+Gender differentiation was pronounced with males reporting significantly higher enjoyment of violent gameplay (85\% vs. 76\% combined; 62\% vs. 42\% consistent enjoyment).
+Gaming demonstrated predominantly social characteristics (67\% with substantial peer interaction). Regarding behavioural outcomes, 70\% of parents reported no aggression
+increase or actual decrease following gaming, while 30\% observed increases (23\% moderate, 7\% significant).
+
+Evaluation of three research hypotheses derived from desensitization and aggression frameworks yielded limited support for Hypothesis 1 (violent game exposure correlates
+with higher aggression/ reduced empathy), insufficient measurement for Hypothesis 2 (reward system amplification) and robust support for differential exposure, but
+limited outcome differentiation in Hypothesis 3 (gender effects). THe dissociation between high in-game violence enjoyment (76\%) and predominantly unchanged real-world
+aggression suggests adolescents maintain psychological boundaries between fictional gameplay and real-world moral domains - a phenomenon termed \textit{compartmentalization}
+(\cite{Békés_Ferstenberg_Perry_2018}).
+
+However the 30\% experiencing aggression increases, particularly the 7\% with significant escalation, indicates that violent content demonstrably affects a substantial
+minority. These heterogenous outcomes challenge linear dose-response media effects models and suggest that protective factors (social gaming, moral development, individual
+differences) substantially buffer against predicted negative effects for most adolescents. THe findings necessitate reconceptualization of media effects frameworks
+emphasizing domain-specific emotional calibration and individual heterogeneity rather than uniform desensitization trajectories. Practical implementations emphasize
+informed parental engagement, media literacy education and ethically sophisticated game design over categorical content prohibition.
 \pagenumbering{roman}
 \end{abstract}
 
@@ -40,7 +60,6 @@ This is the abstract.
 \include{report_template_multipleFiles_Introduction} 
 \include{report_template_multipleFiles_Methods}
 \include{report_template_multipleFiles_Results}
-\include{report_template_multipleFiles_Discussion}
 \include{report_template_multipleFiles_Conclusion}
 \printbibliography[title={References}]
 \end{document}
