--- a/research_paper/report_template_multipleFiles_Methods.tex
+++ b/research_paper/report_template_multipleFiles_Methods.tex
@@ -11,7 +11,7 @@ For inclusion in the study, participants must access to video games at least twi
 and participation will be voluntary, anonymous and in accordance with ethical guidelines. For participants under the age of 14, parental consent will also be required. To ensure the
 upholding of the ethical standards of research involving minors, the questionnaires will only be made available to the students by the teachers and parents with no direct
 contact from our side.
-A secondary target group of parents and teachers may also be surveyed to gather additional contextual information on adolescents' gaming habits and parental mediation strategies.
+A secondary target group of parents may also be surveyed to gather additional contextual information on adolescents' gaming habits and parental mediation strategies.
 
 \subsection{Materials and Measures}
 A structured questionnaire will be developed to assess the key constructs of interest. The questionnaire will include validated scales and self-report items to measure:
@@ -29,7 +29,7 @@ A structured questionnaire will be developed to assess the key constructs of int
     \subitem e.g., "When I see someone get hurt, I feel sorry for them.", "I can understand how others feel when they are in pain."
     \item \textbf{Demographics and Gender:} Collecting information on the participants age and gender to explore potential moderating effects.
     \item \textbf{Control variables:} Including measures of average weekly playtime, game genre preference (competitive, narrative, cooperative), parental mediation
-    (restrictive / active), and prior aggression incidents.
+    (restrictive / active) and prior aggression incidents.
 \end{itemize}
 
 All questionnaires will be administered in English and will have a German translation available to ensure comprehension amongst all participants.
