--- a/research_paper/report_template_multipleFiles_Results.tex
+++ b/research_paper/report_template_multipleFiles_Results.tex
@@ -12,7 +12,7 @@
 \end{wrapfigure}
 A total of 118 participants were included in this study: 118 students (aged 12-20 years), with corresponding data from parents. As shown in Figure 1, the student sample 
 was concentrated in the younger to mid-adolescent age ranges with relatively even distribution. The 12-14 age group accounted for 35\% of students (36\% of parents), 
-the 15-17 age group accounted for 40\% of students (36\% of parents), and the 18-20 age group accounted for 25\% of students (28\% of parents). This shows a good spread
+the 15-17 age group accounted for 40\% of students (36\% of parents) and the 18-20 age group accounted for 25\% of students (28\% of parents). This shows a good spread
 across the adolescent age range with a slight but negligible under representation of older adolescents. The close alignment between student and parent age reporting demonstrates convergent validity and confirms that parent-child correspondence
 was maintained in the data collection process.\\
 
@@ -40,14 +40,14 @@ differences across gaming behaviours and outcomes.\\
     \label{fig: Daily Gaming Time}
 \end{wrapfigure}
 Figure 3 represents the distribution of average daily gaming hours across the students. The data reveals a distinctly tendency toward moderat engagement patterns: 30\% 
-reported 1-2 hours, 30\% reported 2-3 hours, and 20\% reported less than 1 hour of gaming per day. Only a small minority (8\%) reported gaming for more than 4 hours daily. 
+reported 1-2 hours, 30\% reported 2-3 hours and 20\% reported less than 1 hour of gaming per day. Only a small minority (8\%) reported gaming for more than 4 hours daily. 
 This indicates that while gaming is a common activity, excessive daily gaming is relatively uncommon in this adolescent sample. Cumulatively, 75\% of students reported
 engaging in gaming for 0.5-3 hours daily. Extreme gaming intensities (exceeding 5 hours daily) were rare, reported by only 3\% of participants, whilst 5\% reported
 4-5 hours and 12\% reported 3-4 hours. The distribution approximated normality around a modal value of 2-4 hours daily, with extreme outliers representing distribution tails
 rather than normative engagement patterns.\\
-Notably, these moderate patterns contradict assumptions about widespread gaming addiction (\cite{Wang_Chan_Mak_Ho_Wong_Ho_2014}). The finding that the modal category of 2-4 hours falls within leisure-time
-recommendations and that excessive gaming (more than 5 hours) remains rare suggests that gaming constitutes a normative leisure activity rather than a pathological behaviour
-in this adolescent cohort.\\
+Notably, these moderate patterns contradict assumptions about widespread gaming addiction (\cite{Wang_Chan_Mak_Ho_Wong_Ho_2014}). The finding that the modal category of 2-4 
+hours falls within leisure-time recommendations and that excessive gaming (more than 5 hours) remains rare suggests that gaming constitutes a normative leisure activity rather 
+than a pathological behaviour in this adolescent cohort.\\
 
 \subsubsection{Gaming Frequency Per Week}
 
@@ -122,7 +122,7 @@ adolescents derive greater happiness from violent gameplay compared to their fem
 
 \subsubsection{Aggression Level after prolonged Gaming}
 
-Figure 8 depics the aggressional changes in adolescents after prolonged gaming sessions as seen by the parents.
+Figure 8 depicts the aggressional changes in adolescents after prolonged gaming sessions as seen by the parents.
 \begin{enumerate}
     \item \textbf{No change:} A majority of 52\% reported \textbf{no increase in aggression} after extended gaming periods, indicating that for many adolescents, gaming 
     does not elicit heightened aggressive feelings.
